--- a/page 2.html
+++ b/page 2.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul class="menu">
-            <li><a href="page 1.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><button onclick="toggleDarkMode()">Dark Mode</button></li>
         </ul>
     </nav>
